--- a/src/scss/partials/_project-block.scss
+++ b/src/scss/partials/_project-block.scss
@@ -100,7 +100,7 @@
     }
     
     @include at-mobile {
-     width:100%; 
+     width:auto;
     }
     
     .caption-inner {
